Some fixes to slide sizes and font sizes.
Not perfect. Some messages, in some dimensions still seem too small or too large. And resizing the window can make things a bit odd.

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -117,6 +117,7 @@ body {
 	zoom: 1;
 	filter: alpha(opacity=4);
 	opacity: 0.04;
+  display: none;
 }
 
 .alert {
@@ -156,11 +157,12 @@ body {
   }
 .tweet_message {
   width: 94%;
-  margin: 0 auto;
+  padding-left: 3%;
+  padding-right: 3%;
   position: relative;
 }
   .tweet_message_panel {
-    width: 100%;
+    width: 94%;
     height: 100%;
     position: absolute;
     z-index: 200;
