--- a/public/stylesheets/themes/big_brother.css
+++ b/public/stylesheets/themes/big_brother.css
@@ -17,6 +17,10 @@ body {
   color: #EDED39;
 }
 
+#burn {
+  display: block;
+}
+
 .alert {
   background: #FCFCF2;
   color: #222;
