--- a/public/stylesheets/themes/default.css
+++ b/public/stylesheets/themes/default.css
@@ -1,8 +1,8 @@
 body {
   font-family: Helvetica, Arial, sans-serif;
   font-weight: bold;
-  background: #000;
-  color: #fff;
+  background: #333;
+  color: #ddd;
 }
 
 .slide {
@@ -18,21 +18,19 @@ body {
   color: #fff;
 }
 
-#burn {
-  display: none;
-}
-
 .alert {
   background: #fff;
-  color: #000;
-  /* border-top: 1px solid #000; */
+  color: #333;
+  border-top: 2px solid #333;
 }
 
 .tweet_account {
-  color: #fff;
-  background: #000;
+  color: #aaa;
+  background: #222;
 }
 
+.tweet_message {
+}
   .tweet_message_panel {
-    background: #333;
+    background: #333
   }
